--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,10 @@
 server:
-  port: 8080
+  port: 9999
+
+app:
+  security:
+    jwt:
+      keystore-location: "keys/keystore.jks"
+      keystore-password: "password"
+      key-alias: "jwtsigning"
+      private-key-passphrase: "password"
